--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -234,7 +234,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agarwal</p>
+                    <p>Developed by Yash Agrawal</p>
                 </div>
             </div>
         </footer>
