--- a/portfolio-item_BAR.html
+++ b/portfolio-item_BAR.html
@@ -156,7 +156,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agarwal</p>
+                    <p>Developed by Yash Agrawal</p>
                 </div>
             </div>
         </footer>
