--- a/portfolio-item_Elearn.html
+++ b/portfolio-item_Elearn.html
@@ -176,7 +176,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                  <p>Developed by Yash Agarwal</p>
+                  <p>Developed by Yash Agrawal</p>
                 </div>
             </div>
         </footer>
