--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -104,82 +104,6 @@
         <!-- /.row -->
 
         <!--<hr>-->
-
-        <!-- Project Two
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Business Analysis Report</h3>
-                <h4>Technologies used: R programming, Microsoft Excel Data Analysis</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                <a class="btn btn-primary" href="portfolio-item_BAR.html">View Project</i></a>
-            </div>
-        </div>
-        -->
-        <!-- /.row -->
-
-        <!--<hr>-->
-
-        <!-- Project Three
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>E-Learning Website  </h3>
-                <h4>Technologies used: SQL, Java, Rational Rose, HTML, CSS</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="portfolio-item_Elearn.html">View Project</i></a>
-            </div>
-        </div>
-        -->
-        <!-- /.row -->
-
-        <!--<hr>-->
-
-        <!-- Project Four
-        <div class="row">
-
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Google Adwords Marketing Challenge</h3>
-                <h4>Technologies used: Google Adwords, Microsoft Excel, SEM Rush, Google Trends</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="portfolio-item_GoogleAd.html">View Project</i></a>
-            </div>
-        </div>
-        -->
-        <!-- /.row -->
-
-        <!--<hr>-->
-
-        <!-- Project Five
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>The Process of Management- Green Computing Research Project</h3>
-                <h4>Technologies used: Microsoft Project 2013, Microsoft Powerpoint, Micorosft Word</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="portfolio-item_Mgmt.html">View Project</i></a>
-            </div>
-        </div>
-        -->
-        <!-- /.row -->
-
         <hr>
 
         <!-- Pagination -->
@@ -219,13 +143,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
