--- a/portfolio-item_BAR.html
+++ b/portfolio-item_BAR.html
@@ -141,13 +141,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
