--- a/portfolio-item_Elearn.html
+++ b/portfolio-item_Elearn.html
@@ -123,9 +123,6 @@
             </div>
 
             <div class="col-md-4">
-                <!--<h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-              -->
               <h3>Project Details</h3>
                 <ul>
                     <li>Designed Data Flow Diagram, Use Case, Activity diagram and created software requirements specification(SRS) report which enhanced customer’s understanding about the project </li>
@@ -161,13 +158,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
