--- a/portfolio-item_GoogleAd.html
+++ b/portfolio-item_GoogleAd.html
@@ -47,11 +47,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!--
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                  -->
+                    
                     <li>
                         <a href="resume.html">Resume</a>
                     </li>
@@ -117,13 +113,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
@@ -132,7 +128,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agarwal</p>
+                    <p>Developed by Yash Agrawal</p>
                 </div>
             </div>
         </footer>
