--- a/portfolio-item_HranalyticsR.html
+++ b/portfolio-item_HranalyticsR.html
@@ -94,10 +94,17 @@
               <h3>Project Details</h3>
                 <ul>
                   <li>Analyzed the problem of employee attrition in Human Resource department dataset consisting of 1470 rows and 35 columns in R programming</li>
-                  <li>Visualized different contributing factors towards attrition by using ggplot package</li>
-                  <li>Performed Factor Analysis by building a Logistic Regression model, used backward elimination method to find top contributing factors</li>
+                  <li>Visualized different contributing factors towards attrition by using ggplot package and Power BI</li>
+                  <li>Performed Factor Analysis, used backward elimination method to find top contributing factors towards attrition</li>
                   <li>Built three machine learning models namely - Logistic Regression model, Random Forest model, and Decision Tree model to train the data set and predict results</li>
-                  <li>Compared accuracy of different machine learning models by making confusion matrix</li>
+                  <li>Compared accuracy of different machine learning models by making confusion matrix
+                    <ul>
+                      <li> Accuracy for Logistic regression model: 89.6%</li>
+                      <li> Accuracy for Decision Tree model:85.8% </li>
+                      <li> Accuracy for Random forest model: 85.01</li>
+                    </ul>  
+                  </li>
+
                 </ul>
             </div>
             <a class="btn btn-primary" href="https://github.com/yshagrawal/HR_Analytics_employeeAttrition_R/" target="_blank">View on Github</i></a>
