--- a/portfolio-item_HranalyticsR.html
+++ b/portfolio-item_HranalyticsR.html
@@ -101,7 +101,7 @@
                     <ul>
                       <li> Accuracy for Logistic regression model: 89.6%</li>
                       <li> Accuracy for Decision Tree model:85.8% </li>
-                      <li> Accuracy for Random forest model: 85.01</li>
+                      <li> Accuracy for Random forest model: 85.01%</li>
                     </ul>  
                   </li>
                 </ul>
