--- a/resume.html
+++ b/resume.html
@@ -83,9 +83,9 @@
                     </li>
                     <li class="active">Resume</li>
                 </ol>
-                <a href="documents/YashAgrawal.pdf" target="_blank">
+                <!--<a href="documents/YashAgrawal.pdf" target="_blank">
                   <p align="right"> ***Download PDF version of Resume</p>
-                </a>
+                </a> -->
                 <h2 class="page-header">Education</h2>
             </div>
             <div class="col-lg-12">
