updates on pages

--- a/portfolio-item_mar.html
+++ b/portfolio-item_mar.html
@@ -106,7 +106,7 @@
         <!-- /.row -->
 
         <!-- Related Projects Row -->
-        <div class="row">
+        <!--<div class="row">
 
             <div class="col-lg-12">
                 <h3 class="page-header">Project Report</h3>
@@ -118,7 +118,7 @@
                     <img class="img-responsive img-hover img-related" src="images/marketresearch/marketresearch.jpg" alt="">
                 </a>
             </div>
-
+-->
         </div>
         <!-- /.row -->
 
