--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -90,7 +90,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                <a href="portfolio-item.html">
+                <a href="portfolio-item_mar.html">
                     <img class="img-responsive img-hover" src="images/marketresearch/researchanalysis.jpg" alt="">
                 </a>
             </div>
