new projects added

--- a/portfolio-item_Elearn.html
+++ b/portfolio-item_Elearn.html
@@ -135,21 +135,7 @@
         </div>
         <!-- /.row -->
 
-        <!-- Related Projects Row -->
-        <div class="row">
-
-            <div class="col-lg-12">
-                <h3 class="page-header">Project Report</h3>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="documents/SRS.pdf" target="_blank">
-                  <p> Click on the link to view report. </p>
-                    <img class="img-responsive img-hover img-related" src="images/elearning.jpg" alt="">
-                </a>
-            </div>
-
-        </div>
+        <!-- Related Projects Documents Row -->
         <!-- /.row -->
 
         <hr>
