--- a/portfolio-item_IBM.html
+++ b/portfolio-item_IBM.html
@@ -133,24 +133,10 @@
                   <li> Worked on IBM Watson Analytics to discover insights and display the findings in creative visuals</li>
                   <li> Developed report and delivered presentation providing conclusion and recommendations to solve the problem</li>
                 </ul>
+                <a class="btn btn-primary" href="https://github.com/yashagrawal06/HR_Analytics_employeeAttrition_R" target="_blank">View on Github</i></a>
             </div>
 
         </div>
-        <!-- /.row -->
-
-        <!-- Related Projects Row -->
-        <div class="row">
-
-            <div class="col-lg-12">
-                <h3 class="page-header">View Detailed Analysis - Presentation</h3>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-                <a href="https://www.slideshare.net/yshagrawal/hr-analytics-employee-attrition-ibm-watson-analytics" target="_blank">
-                  <p>Click on link to view the presentation</p>
-                    <img class="img-responsive img-hover img-related" src="images/ibm/hranalytics.jpg" alt="">
-                </a>
-            </div>
-                    </div>
         <!-- /.row -->
         <hr>
 
