--- a/portfolio-item_NyTableau.html
+++ b/portfolio-item_NyTableau.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Market Analysis Report</title>
+    <title>Yash Agrawal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -75,13 +75,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"> Market Research and Analysis
+                <h1 class="page-header">New York Property Sales(Data Visualization Project)
                     <small></small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="portfolio-1-col.html">Portfolio</a>
                     </li>
-                    <li class="active">Project 5</li>
+                    <li class="active">Project 2</li>
                 </ol>
             </div>
         </div>
@@ -90,19 +90,46 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-           <div class="col-md-8">
-             <h3>Project Details</h3>
-               <ul>
-                   <li>Researched three companies in the industry with different target audiences.</li>
-                   <li>Identified five milestones for the project and described them using the SMART criteria</li>
-                   <li>Analyzed the marketing mix which includes place, price, promotion, and product of the companies and compared their effectiveness</li>
-                   <li>Assessed the companies’ strength, weakness, market opportunities and threats through a SWOT matrix</li>
-                   <li>Conducted a survey of 50 candidates and developed a report.</li>
-               </ul>
-
+            <div class="col-md-8">
+              <h3>Project Details</h3>
+                <ul>
+                    <li>Analyzed dataset containing 84548 rows and 22 columns using Excel and Tableau</li>
+                    <li>Designed geographical map, heat map, bar charts and trend lines on Tableau to get insights from the data</li>
+                </ul>
+            </div>
             </div>
 
-        <!-- /.row -->
+        <!-- Related Projects Row -->
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="page-header">Some insights from the dataset</h3>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="images/NyTableau/v1.jpg" target="_self">
+                    <img class="img-responsive img-hover img-related" src="images/NyTableau/v1.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="images/NyTableau/v2.jpg" target="_self">
+                    <img class="img-responsive img-hover img-related" src="images/NyTableau/v2.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="images/NyTableau/v3.jpg" target="_self">
+                    <img class="img-responsive img-hover img-related" src="images/NyTableau/v3.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="images/NyTableau/v4.jpg" target="_self">
+                    <img class="img-responsive img-hover img-related" src="images/NyTableau/v4.jpg" alt="">
+                </a>
+            </div>
+
         </div>
         <!-- /.row -->
 
@@ -127,7 +154,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agarwal</p>
+                    <p>Developed by Yash Agrawal</p>
                 </div>
             </div>
         </footer>
