--- a/resume.html
+++ b/resume.html
@@ -126,26 +126,25 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6">
+                    <h4><i>Student Academic Performance Analysis</i></h4>
+                    <a href="portfolio-item_AcademicPerformanceR.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/studentacademic.jpg" alt="">
+                    </a>
+                    
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Human Resource Employee Attrition</i></h4>
                     <a href="portfolio-item_IBM.html">
                         <img class="img-responsive img-portfolio img-hover" src="images/hr_analytics.jpg" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
-                    <a href="portfolio-item_BAR.html">
-                        <img class="img-responsive img-portfolio img-hover" src="images/severancepay.jpg" alt="">
+                    <h4><i>New York Property Sales Analysis</i></h4>
+                    <a href="portfolio-item_NyTableau.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/NyTableau/v1.jpg" alt="">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <a href="portfolio-item_Mgmt.html">
-                        <img class="img-responsive img-portfolio img-hover" src="images/projectmgmt.jpg" alt="">
-                    </a>
-                  </div>
-                  <div class="col-lg-12">
-                  <a href="portfolio-1-col.html">
-                    <p align="left"> View more projects </p>
-                  </a>
-                </div>
-            </div>
+        </div>
         </div>
 
         <!-- /.row -->
