--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -86,138 +86,73 @@
             </div>
         </div>
         <!-- /.row -->
+        <!-- Project First Row -->
+<div class="row">
+                <div class="col-lg-12">
+                    <h2 class="page-header">Recent Projects</h2>
+                </div>
 
-        <!-- Project One -->
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Student Academic Performance Analysis</i></h4>
+                    <a href="portfolio-item_AcademicPerformanceR.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/studentacademic.jpg" alt="">
+                    </a>
+                    
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Human Resource Employee Attrition</i></h4>
+                    <a href="portfolio-item_IBM.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/hr_analytics.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>New York Property Sales Analysis</i></h4>
+                    <a href="portfolio-item_NyTableau.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/NyTableau/v1.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+
+               <hr>
+<!-- Second Row --> 
         <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item_IBM.html">
-                    <img class="img-responsive img-hover" src="images/hr_analytics.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Human Resource Employee Attrition</h3>
-                <p><strong>Technologies used:</strong> R programming, IBM Watson analytics, Microsoft Excel, Microsoft Powerpoint</p>
-                <p> This project is about uncovering factors that lead to employee attrition.
-                </p>
-                  <a class="btn btn-primary" href="portfolio-item_IBM.html">View Project on IBM Watson Analytics</i></a>
-                  <p>&nbsp;</p>
-                  <a class="btn btn-primary" href="portfolio-item_HranalyticsR.html">View Project on R programming</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Two -->
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Business Analysis - Severance Pay</i></h4>
+                    <a href="portfolio-item_BAR.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/severancepay.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Project Management</i></h4>
+                    <a href="portfolio-item_Mgmt.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/projectmgmt.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Google AdWords Marketing Challenge</i></h4>
+                    <a href="portfolio-item_GoogleAd.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/gomc.jpg" alt="">
+                    </a>
+                </div>
+        </div> 
+<hr>
+<!-- Third Row --> 
         <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item_BAR.html"><!-- http://placehold.it/700x300-->
-                    <img class="img-responsive img-hover" src="images/severancepay.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Business Analysis Report - Severance Pay</h3>
-                <p><strong>Technologies used:</strong> R programming, Microsoft Excel Data Analysis</p>
-                <p>This project is about analyzing a claim of an employee regarding his severance pay.
-                  Regression Model was built to understand the relation between the number of weeks of severance pay and number of years at the company.
-                  Hypothesis Testing was performed to analyze the claim.
-                   </p>
-                <a class="btn btn-primary" href="portfolio-item_BAR.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item_Elearn.html">
-                    <img class="img-responsive img-hover" src="images/elearning.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>E-Learning Website  </h3>
-                <h4>Technologies used: SQL, Java, Rational Rose, HTML, CSS</h4>
-                <p>The project is about providing free courses to study online. The study materials were in the form of pdf, videos and presentations.</p>
-                <a class="btn btn-primary" href="portfolio-item_Elearn.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
-        <div class="row">
-
-            <div class="col-md-7">
-                <a href="portfolio-item_GoogleAd.html">
-                    <img class="img-responsive img-hover" src="images/gomc.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Google Adwords Marketing Challenge</h3>
-                <h4>Technologies used: Google Adwords, Microsoft Excel, SEM Rush, Google Trends</h4>
-                <p>Participated in the Google Online Marketing Challenge, worked for Clear Vision Solar, a local solar energy company in orange county to increase their brand awareness.
-                   The objective of the competition was to develop and implement an efficient marketing campaign for a client using $250 budget in Google AdWords.</p>
-                <a class="btn btn-primary" href="portfolio-item_GoogleAd.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item_Mgmt.html">
-                    <img class="img-responsive img-hover" src="images/projectmgmt.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>The Process of Management- Green Computing Research Project</h3>
-                <h4>Technologies used: Microsoft Project 2013, Microsoft Powerpoint, Micorosft Word</h4>
-                <p>As the project was in the process of Management, it was divided into four parts:
-                  <li>Project Integration Management</li>
-                  <li>Project Scope Management</li>
-                  <li>Project Time Management</li>
-                  <li> Project Cost Management</li>
-                </p>
-                <a class="btn btn-primary" href="portfolio-item_Mgmt.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Pagination -->
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="portfolio-2-col.html">2</a>
-                    </li>
-                    <!--<li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>-->
-                    <li>
-                        <a href="portfolio-2-col.html">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Market Research</i></h4>
+                    <a href="portfolio-item_mar.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/marketresearch/researchanalysis.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>E-Learning Website</i></h4>
+                    <a href="portfolio-item_Elearn.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/elearning.jpg" alt="">
+                    </a>
+                </div>
+        </div>            
+        
+        <!-- Pagination --><!-- for next page of project-->
         <!-- /.row -->
 
         <hr>
