--- a/portfolio-item_AcademicPerformanceR.html
+++ b/portfolio-item_AcademicPerformanceR.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Market Analysis Report</title>
+    <title>Hr_Analytics_R</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -75,13 +75,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"> Market Research and Analysis
+                <h1 class="page-header">Student Academic Performance Analysis
                     <small></small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="portfolio-1-col.html">Portfolio</a>
+                    <li><a href="portfolio-1-col.html">Portfolio  </a>
                     </li>
-                    <li class="active">Project 5</li>
+                    <li class="active">Project 1</li>
                 </ol>
             </div>
         </div>
@@ -90,19 +90,25 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-           <div class="col-md-8">
-             <h3>Project Details</h3>
-               <ul>
-                   <li>Researched three companies in the industry with different target audiences.</li>
-                   <li>Identified five milestones for the project and described them using the SMART criteria</li>
-                   <li>Analyzed the marketing mix which includes place, price, promotion, and product of the companies and compared their effectiveness</li>
-                   <li>Assessed the companies’ strength, weakness, market opportunities and threats through a SWOT matrix</li>
-                   <li>Conducted a survey of 50 candidates and developed a report.</li>
-               </ul>
-
+            <div class="col-lg-12">
+              <h3>Project Details</h3>
+                <ul>
+                  <li>Analyzed dataset based on student Academic Performance to find the top personal, professional and social factors which have an influence on student's final grades</li>
+                  <li>Performed data preprocessing which included data cleaning using R and XLMiner to handle missing values, outliers in the dataset,and data transformation to correctly identify the type of variables used for analysis</li>
+                  <li>Built three predictive machine learning models- multiple linear regression model, Decision Tree model, and Random Forest model to predict student's grades and compared model accuracy by RMSE</li>
+                  <li>Determined factors influencing the target variable using forward and backward variable selection methods</li>
+                  <li>Variable Importance plot was designed using Random Forest model to determine top 10 factors which had highest influence on the student's grades</li>
+                  <li>Designed a presentation which included insights from the analysis, graphs, and charts for better understanding and recommendations for improving grades</li>
+                </ul>
             </div>
+            <a class="btn btn-primary" href="https://github.com/yashagrawal06/Student-Academic-Performance-Analysis" target="_blank">View on Github</i></a>
 
+        </div>
         <!-- /.row -->
+
+        <!-- Related Projects Row -->
+        <div class="row">
+
         </div>
         <!-- /.row -->
 
