--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                   On this site you will find some interesting projects that I've worked on and some random things about me.<br><a href="portfolio-1-col.html" target="_blank"><strong>Click here</a></strong> to have a look at my projects,
                   Or <a href="randomthings.html" target="_blank"><strong>Click here</a></strong> to know some interesting or random things about me!
                 </p>
+                <iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiZGJmZGZlZDgtMzQwNi00YjI3LWFhYjctNDIyYjMyYTQxZDE0IiwidCI6IjgyYzBiODcxLTMzNWYtNGI1Yy05ZWQwLWE0YTIzNTY1YTc5YiIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
               </div>
           </div>
 
