--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -93,6 +93,28 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6">
+                    <h4><i>Marketing Customer Value Analysis Dashboard in PowerBI</i></h4>
+                    <a href="portfolio-item_PowerBI_CLV.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/powerbi_clv.jpg" alt="">
+                    </a>
+                    
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>Human Resource Employee Attrition Dashboard in PowerBI</i></h4>
+                    <a href="portfolio-item_PowerBI_HrAttrition.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/powerbi_hrattrition.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h4><i>IT Help Desk Ticket Analysis Dashboard in PowerBI</i></h4>
+                    <a href="portfolio-item_PowerBI_ItHelpDesk.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/powerbi_ithelpdesk.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+
+               <hr>
+                <div class="col-md-4 col-sm-6">
                     <h4><i>Student Academic Performance Analysis</i></h4>
                     <a href="portfolio-item_AcademicPerformanceR.html">
                         <img class="img-responsive img-portfolio img-hover" src="images/studentacademic.jpg" alt="">
