--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -114,12 +114,13 @@
             </div>
 
                <hr>
+        <!-- Project sECOND Row -->
+<div class="row">
                 <div class="col-md-4 col-sm-6">
                     <h4><i>Student Academic Performance Analysis</i></h4>
                     <a href="portfolio-item_AcademicPerformanceR.html">
                         <img class="img-responsive img-portfolio img-hover" src="images/studentacademic.jpg" alt="">
                     </a>
-                    
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <h4><i>Human Resource Employee Attrition</i></h4>
@@ -133,9 +134,10 @@
                         <img class="img-responsive img-portfolio img-hover" src="images/NyTableau/v1.jpg" alt="">
                     </a>
                 </div>
-
+</div>
                <hr>
-<!-- Second Row --> 
+<!-- Project Third Row -->
+<div class="row">                
                 <div class="col-md-4 col-sm-6">
                     <h4><i>Business Analysis - Severance Pay</i></h4>
                     <a href="portfolio-item_BAR.html">
@@ -154,9 +156,10 @@
                         <img class="img-responsive img-portfolio img-hover" src="images/gomc.jpg" alt="">
                     </a>
                 </div>
-       
+        </div>       
 <hr>
-<!-- Third Row --> 
+<!-- Project Fourth Row -->
+<div class="row">                
                 <div class="col-md-4 col-sm-6">
                     <h4><i>Market Research</i></h4>
                     <a href="portfolio-item_mar.html">
