--- a/portfolio-item_PowerBI_CLV.html
+++ b/portfolio-item_PowerBI_CLV.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Customer Value Analysis Dashboard</title>
+    <title>Customer Value Analysis Interactive Report</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
