--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -102,7 +102,7 @@
                 <div class="col-md-4 col-sm-6">
                     <h4><i>Marketing Customer Value Analysis in PowerBI</i></h4>
                     <a href="portfolio-item_PowerBI_CLV.html">
-                        <img class="img-responsive img-portfolio img-hover" src="images/powerbi_clv.jpg" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="images/powerbi_clv.JPG" alt="">
                     </a>
                     
                 </div>
