--- a/portfolio-item_PowerBI_H1BVisa.html
+++ b/portfolio-item_PowerBI_H1BVisa.html
@@ -91,8 +91,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <center><iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiMTY2N2Q1NjAtYzMyMy00N2MwLThjZTktMGIzNzM2M2RiNWM1IiwidCI6IjgyYzBiODcxLTMzNWYtNGI1Yy05ZWQwLWE0YTIzNTY1YTc5YiIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
-            </center>
+                <center><iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiOWQxMGU1YjctNmMxYS00MzcwLWEyNGQtNWY5ZmY0ODRjY2NkIiwidCI6IjgyYzBiODcxLTMzNWYtNGI1Yy05ZWQwLWE0YTIzNTY1YTc5YiIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe></center>
               <h3>Project Details</h3>
                 <ul>
                   <li>Analyzed the dataset containing 3.2M rows and 12 columns using Power BI</li>
