--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -79,31 +79,23 @@
                     <small></small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="portfolio-1-col.html">Portfolio-1</a>
                     </li>
                     <li class="active">Portfolio</li>
                 </ol>
             </div>
-        </div>
+        
         <!-- /.row -->
 
         <!-- Project One -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item_mar.html">
-                    <img class="img-responsive img-hover" src="images/marketresearch/researchanalysis.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Market Research and Analysis- Footwear Industry</h3>
-                <h4>Technologies used:Microsoft Excel, Microsoft Powerpoint</h4>
-
-                  <a class="btn btn-primary" href="portfolio-item_mar.html">View Project</i></a>
-            </div>
+        <div class="col-md-4 col-sm-6">
+                    <h4><i>E-Learning Website</i></h4>
+                    <a href="portfolio-item_Elearn.html">
+                        <img class="img-responsive img-portfolio img-hover" src="images/elearning.jpg" alt="">
+                    </a>
+                </div>
         </div>
-        <!-- /.row -->
 
-        <!--<hr>-->
         <hr>
 
         <!-- Pagination -->
@@ -135,6 +127,7 @@
                 </ul>
             </div>
         </div>
+
         <!-- /.row -->
 
         <hr>
@@ -143,13 +136,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
@@ -158,7 +151,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agrawal</p>
+                    <p>Developed by Yash Agarwal</p>
                 </div>
             </div>
         </footer>
