--- a/portfolio-item_PowerBI_RefugeeAnalysisUnhcr.html
+++ b/portfolio-item_PowerBI_RefugeeAnalysisUnhcr.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Projects</title>
+    <title>Refugee Analysis UNHCR</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
-                    
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -75,59 +75,39 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header" style="text-align:center">Projects
+                <h1 class="page-header">The Global flow of Refugees - A PowerBI Interactive Report
                     <small></small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="portfolio-1-col.html">Portfolio-1</a>
+                    <li><a href="portfolio-1-col.html">Portfolio</a>
                     </li>
-                    <li class="active">Portfolio</li>
+                    <li class="active">Project</li>
                 </ol>
             </div>
-        
+        </div>
         <!-- /.row -->
 
-        <!-- Project One -->
-        <div class="col-md-4 col-sm-6">
-                    <h4><i>E-Learning Website</i></h4>
-                    <a href="portfolio-item_Elearn.html">
-                        <img class="img-responsive img-portfolio img-hover" src="images/elearning.jpg" alt="">
-                    </a>
-                </div>
-        </div>
+        <!-- Portfolio Item Row -->
+        <div class="row">
 
-        <hr>
-
-        <!-- Pagination -->
-        <div class="row text-center">
             <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="portfolio-1-col.html">&laquo;</a>
-                    </li>
-                    <li >
-                        <a href="portfolio-1-col.html">1</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">2</a>
-                    </li>
-                    <!--<li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                  -->
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
+                <center><iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiMGE1ZWNiODgtODlmNi00ZTFkLTgwYjItZDMwMmUwNDc3YmMwIiwidCI6IjgyYzBiODcxLTMzNWYtNGI1Yy05ZWQwLWE0YTIzNTY1YTc5YiIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe></iframe>
+            </center>
+              <h3>Project Details</h3>
+                <ul>
+                  <li>Analyzed the dataset containing 118K rows and 11 columns using Power BI</li>
+                  <li>Designed flow map,scatter plots, and slicers to get insights from the data and understand the refugee migrations</li>
+                  <li>Developed a Power BI interactive report that provided valuable insights about the dataset</li>
                 </ul>
             </div>
-        </div>
 
+        </div>
+        <!-- /.row -->
+
+        <!-- Related Projects Row -->
+        <div class="row">
+
+        </div>
         <!-- /.row -->
 
         <hr>
@@ -136,13 +116,13 @@
         <footer>
           <ul class="list-unstyled list-inline list-social-icons">
             <li>
-                <a href="https://github.com/yshagrawal" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+                <a href="https://github.com/yashagrawal06" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yshagrawal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/yashagrawal06" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
             </li>
               <li>
-                  <a href="https://www.facebook.com/yshagrawal" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.facebook.com/yashagrawal06" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
               </li>
               <li>
                   <a href="https://www.instagram.com/yash_agrawal_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
