--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -94,7 +94,7 @@
                 <div class="col-md-4 col-sm-6">
                     <h4><i>The Global flow of Refugees Analysis in PowerBI</i></h4>
                     <a href="portfolio-item_PowerBI_RefugeeAnalysisUnhcr.html">
-                        <img class="img-responsive img-portfolio img-hover" src="images/PowerBI_Refugee.JPG" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="images/PowerBI_Refugee.jpg" alt="">
                     </a>
                     
                 </div>
