new projects added

--- a/index.html
+++ b/index.html
@@ -90,13 +90,9 @@
                 <h2 class="page-header" style="text-align:center">
                     Welcome<br>
                 </h2>
-                <p align="center">Glad You're Here!<br>
-                  My name is Yash and I'm a Computer Science engineer, Aspiring Business/Data Analyst and a former baby! <br>
-                  Right now I'm pursuing my MS in Information Systems(Business Analytics) at California State Univeristy, Fullerton(CSUF).
-                  I also work as a Graduate Research Assistant at CSUF where I analyze data to track performances, manage communcations with current and prospective students,
-                  and help update the wesbite using Web Content Management System.
+                <p align="center">Glad You are Here!<br>
+                  My name is Yash and I am a Master's student in Business Analytics with a Bachelor of Engineering in Computer Science passionate about making an impact by converting data into actionable insights.
                   <br><br>
-                  My true passions are analyzing information, connecting with people and solving problems. <br><br>
                   On this site you will find some interesting projects that I've worked on and some random things about me.<br><a href="portfolio-1-col.html" target="_blank"><strong>Click here</a></strong> to have a look at my projects,
                   Or <a href="randomthings.html" target="_blank"><strong>Click here</a></strong> to know some interesting or random things about me!
                 </p>
