--- a/portfolio-item_CreditCardFraudDetection.html
+++ b/portfolio-item_CreditCardFraudDetection.html
@@ -18,7 +18,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Google Adwords Project</title>
+    <title>Credit Card Fraud Detection</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    
+                    <!--
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                  -->
                     <li>
                         <a href="resume.html">Resume</a>
                     </li>
@@ -80,13 +84,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Google Adwords Marketing Challenge
-                    <small></small>
-                </h1>
+                <h1 class="page-header">Credit Card Fraud Detection</h1>
                 <ol class="breadcrumb">
                     <li><a href="portfolio-1-col.html">Portfolio</a>
                     </li>
-                    <li class="active">Project 7</li>
+                    <li class="active">Project 3</li>
                 </ol>
             </div>
         </div>
@@ -95,17 +97,14 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8">
+            <div class="col-lg-12">
               <h3>Project Details</h3>
                 <ul>
-                    <li> As a team leader for the project, monitored team performance, delegated tasks and set deadlines to complete the project in time efficient manner</li>
-                    <li> Researched customer base and potential market according to the product offered by the company</li>
-                    <li> Designed a Campaign by generating cost efficient keywords using Google Keyword Planner and Google Trends</li>
-                    <li> Estimated Budget for an individual week according to different campaigns and objectives which resulted in efficient cost management</li>
-                    <li>  Projected Campaign goals such as CTR, CPC, impressions and improvised during the campaign to reach the goals</li>
+            <li>Performed data preprocessing which included data cleaning, feature scaling and normalizing in Python</li>
+                  <li>Used synthetic minority over-sampling technique to handle imbalanced dataset problem, built binomial logistic regression classifier and evaluated model performance by confusion matrix, F-1 score, precision and recall</li>
                 </ul>
-
             </div>
+            <a class="btn btn-primary" href="https://github.com/yashagrawal06/Credit-Card-Fraud-Detection" target="_blank">View on Github</i></a>
 
         </div>
         <!-- /.row -->
@@ -137,7 +136,7 @@
           </ul>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Developed by Yash Agrawal</p>
+                    <p>Developed by Yash Agarwal</p>
                 </div>
             </div>
         </footer>
