--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume</title>
+    <title>A Quick Look at my Achievements</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
         <!-- Page Heading/Breadcrumbs-->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header" style="text-align:center">Resume
+                <h1 class="page-header" style="text-align:center">A Quick Look at my Achievements
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -99,14 +99,14 @@
             </div>
             <div class="col-lg-12">
               <h4><strong>California State University-Fullerton, Mihaylo College of Business and Economics</span></strong></h4>
-              <p><i>Master of Science(M.S.), Management Information systems,Business Analytics</i></p>
-              <p> 2016 &#8211; 2019</p>
+              <p><i>Master of Science(M.S.), Information Systems and Decision Sciences - Business Analytics</i></p>
+              <p> 2016 &#8211; 2018</p>
               <p> Activites and Societies:<a href="http://csuf-bdac.com/" target="_blank">Vice President of Marketing for Business and Data Analytics Club (BDAC)</a></p>
             </div>
             <div class="col-lg-12">
               <h4><strong>Rajiv Gandhi Prodyogiki Vishwavidyalaya</strong></h4>
               <p><i>Bachelor of Engineering(B.E.), Computer Science</i></p>
-              <p>2012-2016</p>
+              <p>2012 &#8211; 2016</p>
             </div>
               <div class="divider line"></div>
 
@@ -117,15 +117,39 @@
                 <h2 class="page-header">Professional Experience</h2>
             </div>
             <div class="col-md-6">
-                <h4><strong>Graduate Research Assistant</strong></h4>
+                <h4><strong>Graduate Research Assistant/Analyst  <h5>[05/2017 - present]</h5></strong></h4>
                 <p><i> California State Univeristy Fullerton</i></p>
                 <ul>
-                    <li>Assist the department chair and the faculty in analyzing data, generating reports, and administrative work</li>
-                    <li>Acquire, compile and analyze data from external sources for student satisfaction rate, probation rate, and graduation rate</li>
+                <h5><strong>Impact:</strong></h5>
+                    <li> Create dashboards using Tableau and PowerBI which displayed insights and reduced manual work by 25%</li> 
+
+                <h5><strong>Responsibilites:</strong></h5>
+                    <li>Acquire and analyze data from external sources for student satisfaction rate, probation rate, and graduation rate</li>
+                    <li>Create dashboards using Tableau and PowerBI that displays actionable insights</li>
+                    <li>Write SQL queries to gather and aggregate data to design dashboards</li>
+                    <li>Summarized data using Pivot tables and generated reports in Excel</li>
                     <li>Implement and maintain applications to track and analyze enrollment and graduation data</li>
-                    <li>Create and manage reports for grading and academic related activities</li>
-                    <li>Update and manage the department website using Web Content Management System</li>
-                    <li>Manage department events, information sessions, and other presentations</li>
+                    <li>Manage communications with prospective and current students</li>
+                    <li>Created training manuals and translated business requirements into technical documentation</li>
+
+                <h5><strong>Technologies/skills used:</strong></h5>
+                    Tableau, Power BI, SQL, time management, communication, presentation skills, leadership, MS Access database, Excel, pivot table/charts    
+                </ul>
+                </div>
+                <div class="col-md-6">
+                <h4><strong>Data Analyst Intern (Product and Customer Insights) <h5>[05/2018 - 08/2018]</h5></strong></h4>
+                <p><i> American Family Insurance</i></p>
+                <ul>
+                <h5><strong>Impact:</strong></h5>
+                    <li> Developed 2 new product metrics and provided actionable insights on the ongoing development of customer metrics</li> 
+                    <li>Reduced manual work for analysis by creating automated Tableau dashboards and R scripts which saved 240 business hours annually</li>
+                <h5><strong>Responsibilites:</strong></h5>
+                    <li>Collaborated with cross-functional teams to develop new customer and product metrics and provided insights about them by designing automated Tableau dashboards</li>
+                    <li>Utilized SQL, HQL(Hive), JQL, R to provide handle ad hoc requests about customer/products and optimized queries to reduce execution time by 30%</li>
+                    <li>Integrated data from different sources and created automated dashboards using Tableau, R scripts to display actionable insights about the customer, product, trends and presented to diverse stakeholders</li>
+
+                <h5><strong>Technologies/skills used:</strong></h5>
+                    Tableau, R, Python, JIRA, SQL, PostgreSQL, Hadoop, Hive, JQL, Microsoft Excel, Greenplum, PostgreSQL, metric development, automation reports, leadership, management    
                 </ul>
                 </div>
           </div>
