--- a/portfolio-item_BAR.html
+++ b/portfolio-item_BAR.html
@@ -107,8 +107,8 @@
                     <li>Developed a regression model at 95% confidence interval to determine the solution and examine the hypothesis</li>
                     <li> Developed a report with findings and results from descriptive statistics, hypothesis testing and regression analysis and provided conclusion and recommendations for the business case</li>
                 </ul>
-                                </div>
-            </div>
+             </div>
+          </div>
 
         <!-- Related Projects Row -->
         <div class="row">
@@ -119,25 +119,25 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="images/bar/Table1.jpg" target="_self">
-                    <img class="img-responsive img-hover img-related" src="images/bar/Table1.jpg" alt="">
+                    <img class="img-responsive img-hover img-related" src="images/bar/Table1.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="images/bar/Table2-RegressionAnalysis.jpg" target="_self">
-                    <img class="img-responsive img-hover img-related" src="images/bar/Table2-RegressionAnalysis.jpg" alt="">
+                    <img class="img-responsive img-hover img-related" src="images/bar/Table2-RegressionAnalysis.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="images/bar/graph1.jpg" target="_self">
-                    <img class="img-responsive img-hover img-related" src="images/bar/graph1.jpg" alt="">
+                    <img class="img-responsive img-hover img-related" src="images/bar/graph1.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="images/bar/analysis1.jpg" target="_self">
-                    <img class="img-responsive img-hover img-related" src="images/bar/analysis1.jpg" alt="">
+                    <img class="img-responsive img-hover img-related" src="images/bar/analysis1.JPG" alt="">
                 </a>
             </div>
 
