--- a/portfolio-item_BAR.html
+++ b/portfolio-item_BAR.html
@@ -118,25 +118,25 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="images/bar/Table1.jpg" target="_self">
+                <a href="images/bar/Table1.JPG" target="_self">
                     <img class="img-responsive img-hover img-related" src="images/bar/Table1.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="images/bar/Table2-RegressionAnalysis.jpg" target="_self">
+                <a href="images/bar/Table2-RegressionAnalysis.JPG" target="_self">
                     <img class="img-responsive img-hover img-related" src="images/bar/Table2-RegressionAnalysis.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="images/bar/graph1.jpg" target="_self">
+                <a href="images/bar/graph1.JPG" target="_self">
                     <img class="img-responsive img-hover img-related" src="images/bar/graph1.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="images/bar/analysis1.jpg" target="_self">
+                <a href="images/bar/analysis1.JPG" target="_self">
                     <img class="img-responsive img-hover img-related" src="images/bar/analysis1.JPG" alt="">
                 </a>
             </div>
